[gd_scene load_steps=20 format=3 uid="uid://bgw07jqxk7uwd"]

[ext_resource type="Texture2D" uid="uid://d772i5qcg42r" path="res://images/aroeira.png" id="1_sdsva"]
[ext_resource type="Script" path="res://source/components/motion_component.gd" id="2_cnh11"]
[ext_resource type="Script" path="res://source/body_hitbox.gd" id="2_j4fty"]
[ext_resource type="Script" path="res://source/components/health_component.gd" id="3_1pbox"]
[ext_resource type="Script" path="res://source/states/state_machine.gd" id="4_sgbe7"]
[ext_resource type="Script" path="res://source/states/enemy_state_idle_01.gd" id="5_0xljm"]
[ext_resource type="Script" path="res://source/components/combat_component.gd" id="5_bfa1x"]
[ext_resource type="Script" path="res://source/states/enemy_state_roam_01.gd" id="8_btyt0"]
[ext_resource type="Script" path="res://source/states/enemy_state_die_01.gd" id="9_8m1sv"]
[ext_resource type="PackedScene" uid="uid://dimfi5n0yonvs" path="res://scenes/collectibles/standard_food.tscn" id="10_dqeiv"]

[sub_resource type="Animation" id="Animation_63bfe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_gvnm2"]
resource_name = "idle_left"
length = 1.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_u1r0n"]
resource_name = "idle_right"
length = 1.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_i7ux6"]
resource_name = "run_right"
length = 0.600005
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21]
}

[sub_resource type="Animation" id="Animation_sy4vi"]
resource_name = "run_left"
length = 0.600005
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4xu3m"]
_data = {
"RESET": SubResource("Animation_63bfe"),
"idle-left": SubResource("Animation_gvnm2"),
"idle-right": SubResource("Animation_u1r0n"),
"run-left": SubResource("Animation_i7ux6"),
"run-right": SubResource("Animation_sy4vi")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_knebj"]
size = Vector2(6, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k8o3n"]
size = Vector2(6, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rl1de"]
size = Vector2(9, 12)

[node name="Aroeira" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 17

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle-right"
libraries = {
"": SubResource("AnimationLibrary_4xu3m")
}

[node name="EnemySprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_sdsva")
offset = Vector2(0, -8.5)
hframes = 10
vframes = 3

[node name="BodyCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -5.5)
shape = SubResource("RectangleShape2D_knebj")

[node name="BodyHitbox" type="Area2D" parent="." node_paths=PackedStringArray("combat")]
position = Vector2(0, -5)
collision_layer = 64
collision_mask = 4
script = ExtResource("2_j4fty")
combat = NodePath("../Components/CombatComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyHitbox"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_k8o3n")
debug_color = Color(0.396078, 0, 0.00784314, 0.419608)

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2(0, -5.5)
collision_layer = 32
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_rl1de")
debug_color = Color(0, 0.0745098, 0.662745, 0.419608)

[node name="Components" type="Node" parent="."]

[node name="MotionComponent" type="Node" parent="Components"]
script = ExtResource("2_cnh11")
max_speed = 46.0
max_fall_speed = 500.0

[node name="HealthComponent" type="Node" parent="Components"]
script = ExtResource("3_1pbox")
max_health = 2

[node name="CombatComponent" type="Node" parent="Components" node_paths=PackedStringArray("motion", "health")]
script = ExtResource("5_bfa1x")
motion = NodePath("../MotionComponent")
health = NodePath("../HealthComponent")
attack_damage = 0

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_sgbe7")
initial_state = NodePath("EnemyStateIdle01")

[node name="EnemyStateIdle01" type="Node" parent="StateMachine" node_paths=PackedStringArray("character_body", "motion", "idle_timer", "animation_player")]
script = ExtResource("5_0xljm")
character_body = NodePath("../..")
motion = NodePath("../../Components/MotionComponent")
idle_timer = NodePath("IdleTimer")
animation_player = NodePath("../../AnimationPlayer")

[node name="IdleTimer" type="Timer" parent="StateMachine/EnemyStateIdle01"]
one_shot = true

[node name="EnemyStateRoam01" type="Node" parent="StateMachine" node_paths=PackedStringArray("character_body", "motion", "roam_timer", "animation_player")]
script = ExtResource("8_btyt0")
character_body = NodePath("../..")
motion = NodePath("../../Components/MotionComponent")
roam_timer = NodePath("RoamTimer")
animation_player = NodePath("../../AnimationPlayer")

[node name="RoamTimer" type="Timer" parent="StateMachine/EnemyStateRoam01"]
one_shot = true

[node name="EnemyStateDie01" type="Node" parent="StateMachine" node_paths=PackedStringArray("character_body", "health", "animation_player")]
script = ExtResource("9_8m1sv")
character_body = NodePath("../..")
health = NodePath("../../Components/HealthComponent")
animation_player = NodePath("../../AnimationPlayer")

[node name="StandardFood" parent="." instance=ExtResource("10_dqeiv")]
position = Vector2(0, -19)

[connection signal="area_entered" from="Hurtbox" to="Components/HealthComponent" method="_on_hurtbox_area_entered"]
[connection signal="damage_taken" from="Components/HealthComponent" to="StateMachine/EnemyStateDie01" method="_on_health_component_damage_taken"]
[connection signal="timeout" from="StateMachine/EnemyStateIdle01/IdleTimer" to="StateMachine/EnemyStateIdle01" method="_on_idle_timer_timeout"]
[connection signal="timeout" from="StateMachine/EnemyStateRoam01/RoamTimer" to="StateMachine/EnemyStateRoam01" method="_on_roam_timer_timeout"]
